--- a/Index.html
+++ b/Index.html
@@ -56,9 +56,9 @@
 
                     
                     <h2>Fav hobbies</h2>
-                    BOARD_GAMES
+                    Board Games, anime, beatboxing, robot combat
                     <h2>Fav Shows</h2>
-                    HARRY_POTTER_QUILL
+                    Big Bang Theory, The Simpsons, The Sopranos
             </div>
 
         </div>
