--- a/Index.html
+++ b/Index.html
@@ -54,16 +54,27 @@
 
             <div class="col">
                     <div class="about_text">
-                        <p> <br>    
-                        My hobbies are playing badminton, footbat, reading novels, books and exploring new places and things.<br>
-                        I am also Convener at Aeromodelling Club, IITB and Business Team Member at AUV, IITB<br></p>
+                        <p> <br><br>
+                        My hobbies are coding, playing football, reading novels, books and exploring new places and languages.<br>
+                        <br></p>
                     </div>
 
                     
-                    <h2>Fav hobbies</h2>
-                    Board Games, anime, beatboxing, robot combat
+                  <h2>Fav hobbies</h2> <br>
+                   <ul style="list-style-type:circle" >
+                    <Li>Board Games</Li>
+                    <li>Anime</li>
+                    <li>beatboxing</li>
+                   </ul>
+                    <br> <br>   
                     <h2>Fav Shows</h2>
-                    Big Bang Theory, The Simpsons, The Sopranos
+                    <br>
+                    <ul style="list-style-type:circle" >
+                        <Li> Big Bang Theory</Li>
+                        <li>The Simpsons</li>
+                        <li>The Sopranos</li>
+                       </ul>
+                   
             </div>
 
         </div>
