--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <meta name="keywords" content="dating profile, profile, images, dating, geek">
         <meta name="author" content="Rahul">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/reset.css">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/reset.css">
         <!-- for logo -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
 
