--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="topnav">
             <a class="active" href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="#Skills">Skills</a>
-            <a href="#News">News</a>
+            <a href="#skills">Skills</a>
+            <a href="#news">News</a>
         </div>
 
         <div class="container">
