--- a/index.html
+++ b/index.html
@@ -52,41 +52,53 @@
 
                 </div>
             </div>
-        </div>
 
-
-        <div class="col">
-            <div class="about_text">
-                <p> <br><br>
-                    My hobbies are coding, playing football, reading novels, books and exploring new places and
-                    languages.<br>
+            <div class="col">
+                <div class="about_text">
+                    <p>
+                        My hobbies are coding, playing football, reading novels, books and exploring new places and
+                        languages. I’m down for almost anything, anywhere. Deep discussions over a coffee & bright minds
+                        excites me.
+                    </p>
                     <br>
-                </p>
+                    <p>
+                        I absolutely love seeing how far rabbit trails take me. I am very curious about a lot of
+                        things and will dive in head first into the subject. I usually end up surrounding myself in
+                        whatever
+                        it is until I am satisfied that I have learned everything I want to about it or see what other
+                        tangent it leads me to.
+                    </p>
+                </div>
+
+
+                <div class="card-grid">
+                    <div class="card">
+                        <h2>Fav Hobbies</h2> <br>
+                        <ul>
+                            <Li>Board Games</Li>
+                            <li>Anime</li>
+                            <li>Beatboxing</li>
+                        </ul>
+                    </div>
+
+                    <div class="card">
+                        <h2>Fav Shows</h2>
+                        <br>
+
+                        <ul>
+                            <Li> Big Bang Theory</Li>
+                            <li>The Simpsons</li>
+                            <li>The Sopranos</li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
-
-
-            <h2>Fav hobbies</h2> <br>
-            <ul style="list-style-type:circle">
-                <Li>Board Games</Li>
-                <li>Anime</li>
-                <li>beatboxing</li>
-            </ul>
-
-            <br> <br>
-            <h2>Fav Shows</h2>
-            <br>
-
-            <ul style="list-style-type:circle">
-                <Li> Big Bang Theory</Li>
-                <li>The Simpsons</li>
-                <li>The Sopranos</li>
-            </ul>
-
         </div>
 
     </div>
 
-    </div>
+    <div class="hr-dashed"></div>
 
 
 
