--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <a class="active" href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#hobbies">Hobbies</a>
-            <a href="#news">News</a>
+            <a href="#skills">Skills</a>
         </div>
 
         <div class="container">
             <div class="col">
 
-                <div class="image">
+                <div class="image" id="home">
                     <img src="img/image.png" alt="" width="50%" height="50%">
                 </div>
 
@@ -53,7 +53,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col" id="about">
                 <div class="about_text">
                     <p><br><br>
                         My hobbies are coding, playing football, reading novels, books and exploring new places and
@@ -71,7 +71,7 @@
                 </div>
 
 
-                <div class="card-grid">
+                <div class="card-grid" id="hobbies">
                     <div class="card">
                         <h2>Fav Hobbies</h2> <br>
                         <ul>
@@ -100,8 +100,8 @@
 
     <div class="hr-dashed"></div>
 
-    <div class="Gallery">
-        <h1>Photography skills</h1>
+    <div class="Gallery" id="skills">
+        <div class="div-highlight"><h1>Photography skills</h1></div>
         <div class="gallery">
               <img src="./img/bird-7071408__340.webp" alt="Cinque Terre" width="600" height="400">
             </a>
